[gd_scene load_steps=5 format=3 uid="uid://djlu545udcdam"]

[ext_resource type="Texture2D" uid="uid://d336il2vyjvyy" path="res://assets/sprites/sign.png" id="1_punkc"]
[ext_resource type="PackedScene" uid="uid://bbr5h18jj6jss" path="res://sing_text_label.tscn" id="2_1sijt"]
[ext_resource type="Script" path="res://cartel.gd" id="2_67s23"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3q0xy"]
size = Vector2(30, 34)

[node name="Cartel" type="Sprite2D"]
texture = ExtResource("1_punkc")
script = ExtResource("2_67s23")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 10)
shape = SubResource("RectangleShape2D_3q0xy")

[node name="SingTextLabel" parent="." instance=ExtResource("2_1sijt")]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.393
anchor_right = 0.5
anchor_bottom = 0.393
offset_left = -32.0
offset_top = -25.152
offset_right = 8.0
offset_bottom = 14.848
scale = Vector2(0.6, 0.6)
size_flags_horizontal = 4
size_flags_vertical = 8

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
